--- a/codecs/semiauto-derivation.html
+++ b/codecs/semiauto-derivation.html
@@ -14,6 +14,8 @@
   
   <meta name="author" content="Darren Gibson"/>
   
+  <meta name="author" content="Erlend Hamnaberg"/>
+  
   
   <meta name="description" content="Circe docs"/>
   
@@ -174,13 +176,13 @@
 
 </span><span class="keyword">implicit</span><span> </span><span class="keyword">val</span><span> </span><span class="identifier">decodeUser</span><span>: </span><span class="type-name">Decoder</span><span>[</span><span class="type-name">User</span><span>] =
   </span><span class="type-name">Decoder</span><span>.</span><span class="identifier">forProduct3</span><span>(</span><span class="string-literal">&quot;id&quot;</span><span>, </span><span class="string-literal">&quot;first_name&quot;</span><span>, </span><span class="string-literal">&quot;last_name&quot;</span><span>)(</span><span class="type-name">User</span><span>.</span><span class="identifier">apply</span><span>)
-</span><span class="comment">// decodeUser: Decoder[User] = io.circe.ProductDecoders$$anon$5@7408d54d
+</span><span class="comment">// decodeUser: Decoder[User] = io.circe.ProductDecoders$$anon$5@1ad431c9
 </span><span>
 </span><span class="keyword">implicit</span><span> </span><span class="keyword">val</span><span> </span><span class="identifier">encodeUser</span><span>: </span><span class="type-name">Encoder</span><span>[</span><span class="type-name">User</span><span>] =
   </span><span class="type-name">Encoder</span><span>.</span><span class="identifier">forProduct3</span><span>(</span><span class="string-literal">&quot;id&quot;</span><span>, </span><span class="string-literal">&quot;first_name&quot;</span><span>, </span><span class="string-literal">&quot;last_name&quot;</span><span>)(</span><span class="identifier">u</span><span> =&gt;
     (</span><span class="identifier">u</span><span>.</span><span class="identifier">id</span><span>, </span><span class="identifier">u</span><span>.</span><span class="identifier">firstName</span><span>, </span><span class="identifier">u</span><span>.</span><span class="identifier">lastName</span><span>)
   )
-</span><span class="comment">// encodeUser: Encoder[User] = io.circe.ProductEncoders$$anon$3@101f4d63</span></code></pre>
+</span><span class="comment">// encodeUser: Encoder[User] = io.circe.ProductEncoders$$anon$3@7f041a0c</span></code></pre>
         <p>It&#39;s not as clean or as maintainable as generic derivation, but it&#39;s less magical, it requires nothing but <code>circe-core</code>, and if you need a custom name mapping it&#39;s currently the best solution (although <code>0.6.0</code> introduces experimental configurable generic derivation in the <code>generic-extras</code> module).</p>
 
         
